<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@drawable/round_corner_all">

    <TextView
        android:id="@+id/creator_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/creator_title"
        android:textSize="20dp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/creator_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edittext"

        android:hint="@string/creator_edittext_hint"
        android:padding="10dp"

        app:layout_constraintTop_toBottomOf="@id/creator_txt" />

    <TextView
        android:id="@+id/creator_txtCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="15dp"
        
        android:background="@color/click_selector_default"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/creator_button_negative"
        android:textSize="14dp"
        android:paddingStart="10dp"

        app:layout_constraintEnd_toStartOf="@id/creator_buttonCreate"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/creator_buttonCreate"
        app:layout_constraintBottom_toBottomOf="@id/creator_buttonCreate"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/creator_buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/main_color"
        app:cornerRadius="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/creator_button_positive"
        android:textSize="14dp"
        app:layout_constraintHorizontal_weight="3"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creator_edittext"
        app:layout_constraintStart_toEndOf="@id/creator_txtCancel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>